tests/paczka1/fuzzy1/47500628.err
Error in line 2: oTpU7aA S902 93,9
Error in line 1: 6RGIKMtE A133 78,5
Error in line 21: S928 A133 41,8
